[package]
name = "site_checker"
version = "0.1.0"
authors = ["Daan Porru <daan@porru.nl>"]
description = "Very simple site status checker written in Rust"
repository = "https://github.com/dporru/rust-site-checker"
readme = "README.md"
license = "MIT"

[dependencies]
hyper = "0.6.16"
argparse = "0.2.1"
